[project]
name = "cisco-show-command-simulators"
version = "0.1.0"
description = "Local Cisco IOS-XE and NX-OS SSH command simulators for NetAdmin Agent development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "paramiko>=3.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
